# rust-arduino-elegoo

./: .gitignore  Cargo.toml  Makefile  README.md  atmega328p.json
0-blink/: Cargo.toml
examples/: 0-blink.rs
examples/1-rgb-led/: main.rs
examples/2-buttons-led/: main.rs
examples/3-active-buzzer/: main.rs
examples/4-passive-buzzer/: README.md  main.rs  sketch.ino
examples/4-passive-buzzer/tone/: Tone.cpp  keywords.txt
scripts/: clean.sh  flash.sh  make.sh
src/: lib.rs
src/tone/: mod.rs  pitches.rs
