[package]
name = "elegoo"
version = "0.1.0"
authors = ["sugarraysam <samuel.blaisdowdy@protonmail.com>"]
edition = "2018"

[dependencies]
# A panic handler is needed.  This is a crate with the most basic one.
# The `leonardo-panic` example shows a more elaborate version.
panic-halt = "0.2.0"
avr-device = "0.2.2"

[dependencies.arduino-uno]
# Use latest commit hash from: https://github.com/Rahix/avr-hal/commits/master
git = "https://github.com/Rahix/avr-hal"
rev = "0c6cf16"

# Configure the build for minimal size
[profile.dev]
panic = "abort"
lto = true
opt-level = "z"

[profile.release]
panic = "abort"
codegen-units = 1
debug = false
lto = true
opt-level = "z"
